fixed index card overflow

--- a/app.css
+++ b/app.css
@@ -143,12 +143,12 @@ button.navbar-toggler {
     }
 }
 
-
 @media (max-width: 1200px) {
     .card-transparent {
         width: 150rem; /* Adjust the width for larger screens */
         height: 600px; /* Adjust the height for larger screens */
-        overflow: scroll;
+        max-height: 80vh; /* Adjust the maximum height as needed */
+        overflow: auto;
     }
 
     .card-transparent .card-body p{
